path for R lib (bis)

--- a/tutorials/r_test.ipynb
+++ b/tutorials/r_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "source": [
     "import rpy2\n",
     "import rpy2.robjects as robjects\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "source": [
     "#utils = importr('utils')\n",
     "#utils.chooseCRANmirror(ind=1)\n",
@@ -58,9 +58,18 @@
     "base = importr('base')\n",
     "gamlss_data = importr('gamlss.data', lib_loc=lib_loc)\n",
     "gamlss_dist = importr('gamlss.dist', lib_loc=lib_loc)\n",
-    "gamlss = importr('gamlss', lib_loc=lib_loc)gamlss = importr('gamlss', lib_loc=lib_loc)"
+    "gamlss = importr('gamlss', lib_loc=lib_loc)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/usr/local/Caskroom/miniforge/base/lib/python3.9/site-packages/rpy2/robjects/vectors.py:980: UserWarning: R object inheriting from \"POSIXct\" but without attribute \"tzone\".\n",
+      "  warnings.warn('R object inheriting from \"POSIXct\" but without '\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
