added resources to tut 0 & 1

--- a/tutorials/0-why_normative_modeling.ipynb
+++ b/tutorials/0-why_normative_modeling.ipynb
@@ -314,11 +314,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# **Resources**\n",
+    "Normative modeling methods papers:\n",
+    "- Marquand et al. Biological Psychiatry 2016 [doi:10.1016/j.biopsych.2015.12.023](https://doi.org/10.1016/j.biopsych.2015.12.023)\n",
+    "- Rutherford et al. bioRxiv 2021 [https://doi.org/10.1101/2021.08.08.455583](https://doi.org/10.1101/2021.08.08.455583)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Next up:** Getting started: normative modeling with the LOESS & Centiles models!"
+   ]
   }
  ],
  "metadata": {
