--- a/tutorials/1-getting_started.ipynb
+++ b/tutorials/1-getting_started.ipynb
@@ -568,8 +568,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **Resources**\n",
+    "Example of use of the LOESS approach:\n",
+    "- Lefebvre et al. Front. Neurosci. 2018 [doi:10.3389/fnins.2018.00662](https://doi.org/10.3389/fnins.2018.00662)\n",
+    "- Maruani et al. Front. Psychiatry 2019 [doi:10.3389/fpsyt.2019.00011](https://doi.org/10.3389/fpsyt.2019.00011)\n",
+    "\n",
+    "For the Centiles approach see:\n",
+    "- Bethlehem et al. Communications Biology 2020 [doi:10.1038/s42003-020-01212-9](https://doi.org/10.1038/s42003-020-01212-9)\n",
+    "- R implementation [here](https://github.com/rb643/Normative_modeling)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Next up:** Normative modeling with multivariate confounds using the Gaussian Process model!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
