updated resources format

--- a/tutorials/1-getting_started.ipynb
+++ b/tutorials/1-getting_started.ipynb
@@ -814,11 +814,11 @@
    "source": [
     "## **Resources**\n",
     "Example of use of the LOESS approach:\n",
-    "- Lefebvre et al. Front. Neurosci. 2018 [doi:10.3389/fnins.2018.00662](https://doi.org/10.3389/fnins.2018.00662)\n",
-    "- Maruani et al. Front. Psychiatry 2019 [doi:10.3389/fpsyt.2019.00011](https://doi.org/10.3389/fpsyt.2019.00011)\n",
+    "- Lefebvre et al. Front. Neurosci. 2018, [Alpha Waves as a Neuromarker of Autism Spectrum Disorder: The Challenge of Reproducibility and Heterogeneity](https://doi.org/10.3389/fnins.2018.00662)\n",
+    "- Maruani et al. Front. Psychiatry 2019, [Morning Plasma Melatonin Differences in Autism: Beyond the Impact of Pineal Gland Volume](https://doi.org/10.3389/fpsyt.2019.00011)\n",
     "\n",
     "For the Centiles approach see:\n",
-    "- Bethlehem et al. Communications Biology 2020 [doi:10.1038/s42003-020-01212-9](https://doi.org/10.1038/s42003-020-01212-9)\n",
+    "- Bethlehem et al. Communications Biology 2020, [A normative modelling approach reveals age-atypical cortical thickness in a subgroup of males with autism spectrum disorder](https://doi.org/10.1038/s42003-020-01212-9)\n",
     "- R implementation [here](https://github.com/rb643/Normative_modeling)."
    ]
   },
