--- a/tutorials/0-why_normative_modeling.ipynb
+++ b/tutorials/0-why_normative_modeling.ipynb
@@ -248,8 +248,8 @@
    "source": [
     "# **Resources**\n",
     "Normative modeling methods papers:\n",
-    "- Marquand et al. Biological Psychiatry 2016 [doi:10.1016/j.biopsych.2015.12.023](https://doi.org/10.1016/j.biopsych.2015.12.023)\n",
-    "- Rutherford et al. bioRxiv 2021 [https://doi.org/10.1101/2021.08.08.455583](https://doi.org/10.1101/2021.08.08.455583)"
+    "- Marquand et al. Biological Psychiatry 2016, [Understanding Heterogeneity in Clinical Cohorts Using Normative Models: Beyond Case-Control Studies](https://doi.org/10.1016/j.biopsych.2015.12.023)\n",
+    "- Rutherford et al. bioRxiv 2021,[The Normative Modeling Framework for Computational Psychiatry](https://doi.org/10.1101/2021.08.08.455583)"
    ]
   },
   {
