added n_subs arg to dataset

--- a/tutorials/1-getting_started.ipynb
+++ b/tutorials/1-getting_started.ipynb
@@ -72,12 +72,12 @@
     "def f(x):\n",
     "    return 2*np.log(x) + np.random.randn()\n",
     "\n",
-    "def dataset(seed=10,sampling='full'):\n",
+    "def dataset(seed=10,sampling='full',n_subs=1000):\n",
     "    # Set seed\n",
     "    np.random.seed(seed)\n",
     "\n",
     "    # Age param\n",
-    "    x = np.sort(sample_x(sampling=sampling))\n",
+    "    x = np.sort(sample_x(sampling=sampling,n_subs=n_subs))\n",
     "\n",
     "    # PROB = 1/CTR = 0\n",
     "    status1 =  np.random.binomial(1,0.2,size=(int(0.75*x.shape[0])))\n",
