--- a/tutorials/2-multivariate_confounds.ipynb
+++ b/tutorials/2-multivariate_confounds.ipynb
@@ -282,7 +282,9 @@
    "metadata": {},
    "source": [
     "### Visualize data\n",
-    "Here we'll look at the data as we usually do (by PROB/CTR), but we'll also explore the effect of the confounds by looking at the data plotted by site and sex."
+    "Here we'll look at the data as we usually do (by PROB/CTR), but we'll also explore the effect of the confounds by looking at the data plotted by site and sex.\n",
+    "\n",
+    "We've chosen to simulate a proband effect that causes a lower score, we can see this by eye when comparing the plots by PROB/CTR and by site - but we can expect the models that don't account for site to miss this effect as the site offsets overwhelm the effect."
    ]
   },
   {
