updated refs to Bohan paper

--- a/tutorials/2-multivariate_confounds.ipynb
+++ b/tutorials/2-multivariate_confounds.ipynb
@@ -808,7 +808,7 @@
     "- Kilian Weinberger's [Cornell lecture](https://www.cs.cornell.edu/courses/cs4780/2018fa/lectures/lecturenote15.html)\n",
     "- A Visual Guide to Gaussian Processes on [distill](https://distill.pub/2019/visual-exploration-gaussian-processes/)\n",
     "- Sklearn's Gaussian Proccesses [documentation](https://scikit-learn.org/stable/modules/gaussian_process.html)\n",
-    "- Xu et al. bioRxiv 2021, [The pitfalls of using Gaussian Process Regression for normative modeling](https://doi.org/10.1101/2021.05.11.443565)"
+    "- Xu et al. PLoS ONE 2021, [The pitfalls of using Gaussian Process Regression for normative modeling](https://doi.org/10.1371/journal.pone.0252108)"
    ]
   },
   {
