added summary and fixes to tut3

--- a/tutorials/3-big_data.ipynb
+++ b/tutorials/3-big_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -538,12 +538,10 @@
     "In this example we will use a dataset with ~25000 subjects to illustrate a case where the approximate model handles the computation easily, whereas using the exact model would require a massive amount of memory and time.\n",
     "\n",
     "Here we are using a dataset with:\n",
-    "- Multiple confounds (explanatory variables) (age, sex & site)\n",
-    "- Homoskedastic variance across the explanatory variable within each site\n",
+    "- A single explanatory variable (age)\n",
+    "- Homoskedastic variance across the explanatory variable\n",
     "- Gaussian noise\n",
-    "- A random offset in score for probands pulled from the gaussian distribution\n",
-    "- A random offset in score for sex pulled from the gaussian distribution\n",
-    "- A random offset in score for site pulled from the gaussian distribution (constant for all subjects from same site)"
+    "- A random offset in score for probands pulled from the gaussian distribution"
    ]
   },
   {
@@ -610,8 +608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize data\n",
-    "Here we'll look at the data as we usually do (by PROB/CTR), but we'll also explore the effect of the confounds by looking at the data plotted by site and sex."
+    "### Visualize data"
    ]
   },
   {
@@ -704,6 +701,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We successfully fit a model to the data in about 150 seconds (running on a laptop with 16GB RAM), that would be impossible with the exact model on the same hardware."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -735,6 +739,18 @@
     "\n",
     "# Plot the z-scores of the model (model residuals / std deviation)\n",
     "m_xl.plot_z()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Summary**\n",
+    "- SVGPs are an approximation to GPs that can scale up to large datasets.\n",
+    "- We can choose which model to use with the `method` parameter of `gp_normative_model`\n",
+    "- By default (`method='auto'`) PyNM will select the model based on the number of subjects in the dataset.\n",
+    "- We can set `method` to `'exact'` or `'approx'` to override the default choice.\n",
+    "- The SVGP model training is controlled by the `num_epochs` and `batch_size` parameters, which we can play with to tune the model fit along with the `length_scale` and `length_scale_bounds` parameters we saw in tutorial 3."
    ]
   },
   {
