--- a/tutorials/5-model_selection.ipynb
+++ b/tutorials/5-model_selection.ipynb
@@ -549,19 +549,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also access the metrics (with full precision) individually, they are stored as attributes of the PyNM object in the following format `{metric}_{model}`, e.g. `SMSE_GAMLSS`."
+    "We can also access the metrics (with full precision) individually, they are stored as attributes of the PyNM object in the following format `{metric}_{model}`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "1.0782062141070172"
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
