--- a/tutorials/2-multivariate_confounds.ipynb
+++ b/tutorials/2-multivariate_confounds.ipynb
@@ -779,7 +779,7 @@
    "source": [
     "### Description of columns\n",
     "- GP_pred\n",
-    "    - Prediction of the LOESS model (mean of predictive distribution).\n",
+    "    - Prediction of the GP model (mean of predictive distribution).\n",
     "- GP_sigma\n",
     "    - Standard deviation of the GP model (std of predictive distribution).\n",
     "- GP_residuals\n",
