added image to tut4

--- a/tutorials/4-complex_data.ipynb
+++ b/tutorials/4-complex_data.ipynb
@@ -438,7 +438,7 @@
    "source": [
     "Here we've implemented the recommended baseline model from the Dinga et al preprint:\n",
     "\n",
-    "![Dinga equation](dinga_equation.gif)"
+    "![image3](image3.jpg)"
    ]
   },
   {
