--- a/tutorials/6-downstream_analyses.ipynb
+++ b/tutorials/6-downstream_analyses.ipynb
@@ -28,9 +28,8 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.model_selection import KFold"
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.svm import SVC"
    ]
   },
   {
