--- a/tutorials/1-getting_started.ipynb
+++ b/tutorials/1-getting_started.ipynb
@@ -331,7 +331,7 @@
    "metadata": {},
    "source": [
     "### Fit Centiles & LOESS models with missing data\n",
-    "One of the main limitations of the Centiles & LOESS models is do not handle missing data well. If there is insufficient data in a bin the model won't be run there and we will have gaps in our results, and if there are simply very few data points in a bin the model estimates won't be reliable. We'll look at other models in the next tutorials that adress this limitation.\n",
+    "One of the main limitations of the Centiles & LOESS models is that they do not handle missing data well. If there is insufficient data in a bin the model won't be run there and we will have gaps in our results, and if there are simply very few data points in a bin the model estimates won't be reliable. We'll look at other models in the next tutorials that address this limitation.\n",
     "\n",
     "To illustrate this we'll generate the same dataset as above but with a gap in subjects for a given age, then fit the LOESS and Centiles models on it with different values of `bin_width` and `bin_spacing` to highlight both issues."
    ]
