--- a/tutorials/2-multivariate_confounds.ipynb
+++ b/tutorials/2-multivariate_confounds.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "From Kilian Weinberger's [Cornell lecture](https://www.cs.cornell.edu/courses/cs4780/2018fa/lectures/lecturenote15.html):\n",
     "\n",
-    "> **Definition**: A GP is a (potentially infinte) collection of random variables (RV) such that the joint distribution of every finite subset of RVs is multivariate Gaussian.\n",
+    "> **Definition**: A GP is a (potentially infinite) collection of random variables (RVs) such that the joint distribution of every finite subset of RVs is multivariate Gaussian.\n",
     "\n",
     "A full discussion is beyond the scope of this tutorial, but we can get by with some key points:\n",
     "\n",
@@ -807,7 +807,7 @@
     "## **Resources**\n",
     "- Kilian Weinberger's [Cornell lecture](https://www.cs.cornell.edu/courses/cs4780/2018fa/lectures/lecturenote15.html)\n",
     "- A Visual Guide to Gaussian Processes on [distill](https://distill.pub/2019/visual-exploration-gaussian-processes/)\n",
-    "- Sklearn's Gaussian Proccesses [documentation](https://scikit-learn.org/stable/modules/gaussian_process.html)\n",
+    "- Sklearn's Gaussian Processes [documentation](https://scikit-learn.org/stable/modules/gaussian_process.html)\n",
     "- Xu et al. PLoS ONE 2021, [The pitfalls of using Gaussian Process Regression for normative modeling](https://doi.org/10.1371/journal.pone.0252108)"
    ]
   },
