--- a/tutorials/4-complex_data.ipynb
+++ b/tutorials/4-complex_data.ipynb
@@ -23,10 +23,10 @@
     "In this tutorial we'll look at using the Generalized Additive Models of Location Scale and Shape (GAMLSS) to model complex data that aren't suitable for the Centiles, LOESS or GP models.\n",
     "\n",
     "## **GAMLSS**\n",
-    "Generalized Additive Models of Location Scale and Shape (GAMLSS) are an extension of Generalized Additive Models (GAM), which are an extension of generalized linear models. The most important feature of the GAMLSS is that they can be used to model multi-parameter distributions, meaning we can specify models for each of location, scale, shape and skewness. This flexibility allows the GAMLSS to overcome the homoskedasticity and gaussian noise asusmptions of the GP & SVGP models. However, GAMLSS are advanced statistical models that require good design choices in order to produce reliable results i.e. they should not be used with off the shelf defaults. \n",
+    "Generalized Additive Models of Location Scale and Shape (GAMLSS) are an extension of Generalized Additive Models (GAM), which are an extension of generalized linear models. The most important feature of the GAMLSS is that they can be used to model multi-parameter distributions, meaning we can specify models for each of location, scale, shape and skewness. This flexibility allows the GAMLSS to overcome the homoskedasticity and gaussian noise assumptions of the GP & SVGP models. However, GAMLSS are advanced statistical models that require good design choices in order to produce reliable results i.e. they should not be used with off the shelf defaults. \n",
     "\n",
     "## **Disclaimer**\n",
-    "The PyNM implementation of GAMLSS is a wrapper the R library `gamlss` and is intended to make it easy for python users to try GAMLSS for normative modeling. However, it does not make available all the utilities of the orignal package and we cannot guarantee the correctness of the implementation for all scenarios. In some cases it will be necessary to use the R package itself for full modeling flexibility!\n",
+    "The PyNM implementation of GAMLSS is a wrapper for the R library `gamlss` and is intended to make it easy for python users to try GAMLSS for normative modeling. However, it does not make available all the utilities of the original package and we cannot guarantee the correctness of the implementation for all scenarios. In some cases it will be necessary to use the R package itself for full modeling flexibility!\n",
     "\n",
     "In this tutorial we will implement the recommendations of the Dinga et al. 2021 [preprint](https://doi.org/10.1101/2021.06.14.448106), which we consider required reading for normative modeling with GAMLSS."
    ]
@@ -577,7 +577,7 @@
     "## **Summary**\n",
     "- GAMLSS can model multi-parameter distributions, making them very flexible.\n",
     "    - We can specify models for each of location, scale, shape and skewness.\n",
-    "- GAMLSS can overcome the homoskedasticity and gaussian noise asusmptions of the GP & SVGP models.\n",
+    "- GAMLSS can overcome the homoskedasticity and gaussian noise assumptions of the GP & SVGP models.\n",
     "- GAMLSS are advanced statistical models that must be used with caution.\n",
     "    - Good design choices required, cannot rely on off the shelf defaults.\n",
     "- GAMLSS are sensitive to the magnitude of the data.\n",
