--- a/tutorials/5-model_selection.ipynb
+++ b/tutorials/5-model_selection.ipynb
@@ -46,7 +46,7 @@
     "- Standardized Mean Squared Error (SMSE)\n",
     "    - Applies for Centiles, LOESS, GP and GAMLSS models.\n",
     "    - Smaller values are better.\n",
-    "- Root Meah Squared Error (RMSE)\n",
+    "- Root Mean Squared Error (RMSE)\n",
     "    - Applies for Centiles, LOESS, GP and GAMLSS models.\n",
     "    - Smaller values are better.\n",
     "- Mean Standardized Log Loss (MSLL)\n",
