--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,4 @@
-@Article{Marquand:2019,
+@Article{marquand:2019,
         author={Marquand, Andre F.
         and Kia, Seyed Mostafa
         and Zabihi, Mariam
@@ -19,7 +19,7 @@
         url={https://doi.org/10.1038/s41380-019-0441-1}
         }
 
-@Article{Marquand:2016,
+@Article{marquand:2016,
     author={Marquand, Andre F.
     and Rezek, Iead
     and Buitelaar, Jan
@@ -46,7 +46,7 @@
     language={eng}
     }
 
-@Article{Loth:2021,
+@Article{loth:2021,
     doi = {10.1371/journal.pcbi.1009477},
     author = {Loth, Eva AND Ahmad, Jumana AND Chatham, Chris AND López, Beatriz AND Carter, Ben AND Crawley, Daisy AND Oakley, Bethany AND Hayward, Hannah AND Cooke, Jennifer AND San José Cáceres, Antonia AND Bzdok, Danilo AND Jones, Emily AND Charman, Tony AND Beckmann, Christian AND Bourgeron, Thomas AND Toro, Roberto AND Buitelaar, Jan AND Murphy, Declan AND Dumas, Guillaume},
     journal = {PLOS Computational Biology},
@@ -61,7 +61,7 @@
     number = {11},
     }
 
-@Article{Xu:2021,
+@Article{xu:2021,
     doi = {10.1371/journal.pone.0252108},
     author = {Xu, Bohan AND Kuplicki, Rayus AND Sen, Sandip AND Paulus, Martin P.},
     journal = {PLOS ONE},
@@ -85,7 +85,7 @@
   url = {https://github.com/amarquand/PCNtoolkit}
 }
 
-@InProceedings{Kia:2020,
+@InProceedings{kia:2020,
     author="Kia, Seyed Mostafa
     and Huijsdens, Hester
     and Dinga, Richard
@@ -113,7 +113,7 @@
     isbn="978-3-030-59728-3"
     }
 
-@Article{Fraza:2021,
+@Article{fraza:2021,
     title = {Warped Bayesian linear regression for normative modelling of big data},
     journal = {NeuroImage},
     volume = {245},
@@ -127,7 +127,7 @@
     abstract = {Normative modelling is becoming more popular in neuroimaging due to its ability to make predictions of deviation from a normal trajectory at the level of individual participants. It allows the user to model the distribution of several neuroimaging modalities, giving an estimation for the mean and centiles of variation. With the increase in the availability of big data in neuroimaging, there is a need to scale normative modelling to big data sets. However, the scaling of normative models has come with several challenges. So far, most normative modelling approaches used Gaussian process regression, and although suitable for smaller datasets (up to a few thousand participants) it does not scale well to the large cohorts currently available and being acquired. Furthermore, most neuroimaging modelling methods that are available assume the predictive distribution to be Gaussian in shape. However, deviations from Gaussianity can be frequently found, which may lead to incorrect inferences, particularly in the outer centiles of the distribution. In normative modelling, we use the centiles to give an estimation of the deviation of a particular participant from the ‘normal’ trend. Therefore, especially in normative modelling, the correct estimation of the outer centiles is of utmost importance, which is also where data are sparsest. Here, we present a novel framework based on Bayesian linear regression with likelihood warping that allows us to address these problems, that is, to correctly model non-Gaussian predictive distributions and scale normative modelling elegantly to big data cohorts. In addition, this method provides likelihood-based statistics, which are useful for model selection. To evaluate this framework, we use a range of neuroimaging-derived measures from the UK Biobank study, including image-derived phenotypes (IDPs) and whole-brain voxel-wise measures derived from diffusion tensor imaging. We show good computational scaling and improved accuracy of the warped BLR for certain IDPs and voxels if there was a deviation from normality of these parameters in their residuals. The present results indicate the advantage of a warped BLR in terms of; computational scalability and the flexibility to incorporate non-linearity and non-Gaussianity of the data, giving a wider range of neuroimaging datasets that can be correctly modelled.}
     }
 
-@Article {Rutherford:2021,
+@Article {rutherford:2021,
 	author = {Rutherford, Saige and Kia, Seyed Mostafa and Wolfers, Thomas and Fraza, Charlotte and Zabihi, Mariam and Dinga, Richard and Berthet, Pierre and Worker, Amanda and Verdi, Serena and Ruhe, Henricus G. and Beckmann, Christian F. and Marquand, Andre F.},
 	title = {The Normative Modeling Framework for Computational Psychiatry},
 	elocation-id = {2021.08.08.455583},
@@ -140,7 +140,7 @@
 	journal = {bioRxiv}
     }
 
-@Article{Rigby:2005,
+@Article{rigby:2005,
     title = {Generalized additive models for location, scale and
       shape,(with discussion)},
     journal = {Applied Statistics},
@@ -151,7 +151,7 @@
     author = {R. A. Rigby and D. M. Stasinopoulos},
   }
 
-@Article{Lefebvre:2018,
+@Article{lefebvre:2018,
     author={Lefebvre, Aline and Delorme, Richard and Delanoë, Catherine and Amsellem, Frederique and Beggiato, Anita and Germanaud, David and Bourgeron, Thomas and Toro, Roberto and Dumas, Guillaume},           
     title={Alpha Waves as a Neuromarker of Autism Spectrum Disorder: The Challenge of Reproducibility and Heterogeneity},      
     journal={Frontiers in Neuroscience},      
@@ -163,7 +163,7 @@
     abstract={Background: There is no consensus in the literature concerning the presence of abnormal alpha wave profiles in patients with autism spectrum disorder (ASD). This may be due to phenotypic heterogeneity among patients as well as the limited sample sizes utilized. Here we present our results of alpha wave profile analysis based on a sample larger than most of those in the field, performed using a robust processing pipeline.Methods: We compared the alpha waves profiles at rest in children with ASD to those of age-, sex-, and IQ-matched control individuals. We used linear regression and non-parametric normative models using age as covariate forparsing the clinical heterogeneity. We explored the correlation between EEG profiles and the patient’s brain volumes, obtained from structural MRI. We automatized the detection of the alpha peak and visually quality controled our MRI measurements. We assessed the robustness of our results by running the EEG preprocessing with two different versions of Matlab as well as Python.Results: A simple linear regression between peak power or frequency of the alpha waves and the status or age of the participants did not allow to identify any statistically significant relationship. The non-parametric normative model (which took account the non-linear effect of age on the alpha profiles) suggested that participants with ASD displayed more variability than control participants for both frequency and amplitude of the alpha peak (p < 0.05). Independent of the status of the individual, we also observed weak associations (uncorrected p < 0.05) between the alpha frequency, and the volumes of several cortical and subcortical structures (in particular the striatum), but which did not survive correction for multiple testing and changed between analysis pelines.Discussions: Our study did not find evidence for abnormal alpha wave profiles in ASD. We propose, however, an analysis pipeline to perform standardized and automatized EEG analyses on large cohorts. These should help the community to address the challenge of clinical heterogeneity of ASD and to tackle the problems of reproducibility.}
     }
 
-@Article{Maruani:2019,
+@Article{maruani:2019,
     author={Maruani, Anna and Dumas, Guillaume and Beggiato, Anita and Traut, Nicolas and Peyre, Hugo and Cohen-Freoua, Alicia and Amsellem, Frédérique and Elmaleh, Monique and Germanaud, David and Launay, Jean-Marie and Bourgeron, Thomas and Toro, Roberto and Delorme, Richard},    
     title={Morning Plasma Melatonin Differences in Autism: Beyond the Impact of Pineal Gland Volume},      
 	journal={Frontiers in Psychiatry},      
@@ -175,7 +175,7 @@
     abstract={While low plasma melatonin, a neuro-hormone synthesized in the pineal gland, has been frequently associated with autism, our understanding of the mechanisms behind it have remained unclear. In this exploratory study, we hypothesized that low melatonin levels in ASD could be linked to a decrease of the pineal gland volume (PGV). PGV estimates with magnetic resonance imaging (MRI) with a voxel-based volumetric measurement method and early morning plasma melatonin levels were evaluated for 215 participants, including 78 individuals with ASD, 90 unaffected relatives, and 47 controls. We first found that both early morning melatonin level and PGV were lower in patients compared to controls. We secondly built a linear model and observed that plasma melatonin was correlated to the group of the participant, but also to the PGV. To further understand the relationship between PGV and melatonin, we generated a normative model of the PGV relationship with melatonin level based on control participant data. We found an effect of PGV on normalized melatonin levels in ASD. Melatonin deficit appeared however more related to the group of the subject. Thus, melatonin variations in ASD could be mainly driven by melatonin pathway dysregulation.}
 }
 
-@Article{Bethlehem:2020,
+@Article{bethlehem:2020,
     author={Bethlehem, Richard A. I.
     and Seidlitz, Jakob
     and Romero-Garcia, Rafael
