--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -48,7 +48,25 @@
 
 @Article{loth:2021,
     doi = {10.1371/journal.pcbi.1009477},
-    author = {Loth, Eva AND Ahmad, Jumana AND Chatham, Chris AND López, Beatriz AND Carter, Ben AND Crawley, Daisy AND Oakley, Bethany AND Hayward, Hannah AND Cooke, Jennifer AND San José Cáceres, Antonia AND Bzdok, Danilo AND Jones, Emily AND Charman, Tony AND Beckmann, Christian AND Bourgeron, Thomas AND Toro, Roberto AND Buitelaar, Jan AND Murphy, Declan AND Dumas, Guillaume},
+    author = {Loth, Eva
+    and Ahmad, Jumana
+    and Chatham, Chris
+    and López, Beatriz
+    and Carter, Ben
+    and Crawley, Daisy
+    and Oakley, Bethany
+    and Hayward, Hannah
+    and Cooke, Jennifer
+    and San José Cáceres, Antonia
+    and Bzdok, Danilo
+    and Jones, Emily
+    and Charman, Tony
+    and Beckmann, Christian
+    and Bourgeron, Thomas
+    and Toro, Roberto
+    and Buitelaar, Jan
+    and Murphy, Declan
+    and Dumas, Guillaume},
     journal = {PLOS Computational Biology},
     publisher = {Public Library of Science},
     title = {The meaning of significant mean group differences for biomarker discovery},
@@ -63,7 +81,10 @@
 
 @Article{xu:2021,
     doi = {10.1371/journal.pone.0252108},
-    author = {Xu, Bohan AND Kuplicki, Rayus AND Sen, Sandip AND Paulus, Martin P.},
+    author = {Xu, Bohan
+    and Kuplicki, Rayus
+    and Sen, Sandip
+    and Paulus, Martin P.},
     journal = {PLOS ONE},
     publisher = {Public Library of Science},
     title = {The pitfalls of using Gaussian Process Regression for normative modeling},
@@ -77,7 +98,7 @@
     }
 
 @Misc{pcntoolkit,
-  author = {A. Marquand},
+  author = {Andre F. Marquand},
   title = {PCNtoolkit: Predictive Clinical Neuroscience Toolkit},
   year = {2022},
   publisher = {GitHub},
@@ -122,13 +143,25 @@
     issn = {1053-8119},
     doi = {https://doi.org/10.1016/j.neuroimage.2021.118715},
     url = {https://www.sciencedirect.com/science/article/pii/S1053811921009873},
-    author = {Charlotte J. Fraza and Richard Dinga and Christian F. Beckmann and Andre F. Marquand},
+    author = {Charlotte J. Fraza 
+    and Richard Dinga 
+    and Christian F. Beckmann 
+    and Andre F. Marquand},
     keywords = {Machine learning, UK Biobank, Big data, Bayesian linear regression, Normative modelling},
     abstract = {Normative modelling is becoming more popular in neuroimaging due to its ability to make predictions of deviation from a normal trajectory at the level of individual participants. It allows the user to model the distribution of several neuroimaging modalities, giving an estimation for the mean and centiles of variation. With the increase in the availability of big data in neuroimaging, there is a need to scale normative modelling to big data sets. However, the scaling of normative models has come with several challenges. So far, most normative modelling approaches used Gaussian process regression, and although suitable for smaller datasets (up to a few thousand participants) it does not scale well to the large cohorts currently available and being acquired. Furthermore, most neuroimaging modelling methods that are available assume the predictive distribution to be Gaussian in shape. However, deviations from Gaussianity can be frequently found, which may lead to incorrect inferences, particularly in the outer centiles of the distribution. In normative modelling, we use the centiles to give an estimation of the deviation of a particular participant from the ‘normal’ trend. Therefore, especially in normative modelling, the correct estimation of the outer centiles is of utmost importance, which is also where data are sparsest. Here, we present a novel framework based on Bayesian linear regression with likelihood warping that allows us to address these problems, that is, to correctly model non-Gaussian predictive distributions and scale normative modelling elegantly to big data cohorts. In addition, this method provides likelihood-based statistics, which are useful for model selection. To evaluate this framework, we use a range of neuroimaging-derived measures from the UK Biobank study, including image-derived phenotypes (IDPs) and whole-brain voxel-wise measures derived from diffusion tensor imaging. We show good computational scaling and improved accuracy of the warped BLR for certain IDPs and voxels if there was a deviation from normality of these parameters in their residuals. The present results indicate the advantage of a warped BLR in terms of; computational scalability and the flexibility to incorporate non-linearity and non-Gaussianity of the data, giving a wider range of neuroimaging datasets that can be correctly modelled.}
     }
 
 @Article {rutherford:2021,
-	author = {Rutherford, Saige and Kia, Seyed Mostafa and Wolfers, Thomas and Fraza, Charlotte and Zabihi, Mariam and Dinga, Richard and Berthet, Pierre and Worker, Amanda and Verdi, Serena and Ruhe, Henricus G. and Beckmann, Christian F. and Marquand, Andre F.},
+	author = {Rutherford, Saige 
+    and Kia, Seyed Mostafa and Wolfers, Thomas 
+    and Fraza, Charlotte and Zabihi, Mariam 
+    and Dinga, Richard 
+    and Berthet, Pierre 
+    and Worker, Amanda 
+    and Verdi, Serena 
+    and Ruhe, Henricus G. 
+    and Beckmann, Christian F. 
+    and Marquand, Andre F.},
 	title = {The Normative Modeling Framework for Computational Psychiatry},
 	elocation-id = {2021.08.08.455583},
 	year = {2021},
@@ -148,11 +181,20 @@
     part = {3},
     pages = {507-554},
     year = {2005},
-    author = {R. A. Rigby and D. M. Stasinopoulos},
+    author = {R. A. Rigby 
+    and D. M. Stasinopoulos},
   }
 
 @Article{lefebvre:2018,
-    author={Lefebvre, Aline and Delorme, Richard and Delanoë, Catherine and Amsellem, Frederique and Beggiato, Anita and Germanaud, David and Bourgeron, Thomas and Toro, Roberto and Dumas, Guillaume},           
+    author={Lefebvre, Aline 
+    and Delorme, Richard 
+    and Delanoë, Catherine 
+    and Amsellem, Frederique 
+    and Beggiato, Anita 
+    and Germanaud, David 
+    and Bourgeron, Thomas 
+    and Toro, Roberto 
+    and Dumas, Guillaume},           
     title={Alpha Waves as a Neuromarker of Autism Spectrum Disorder: The Challenge of Reproducibility and Heterogeneity},      
     journal={Frontiers in Neuroscience},      
     volume={12},      
@@ -164,7 +206,19 @@
     }
 
 @Article{maruani:2019,
-    author={Maruani, Anna and Dumas, Guillaume and Beggiato, Anita and Traut, Nicolas and Peyre, Hugo and Cohen-Freoua, Alicia and Amsellem, Frédérique and Elmaleh, Monique and Germanaud, David and Launay, Jean-Marie and Bourgeron, Thomas and Toro, Roberto and Delorme, Richard},    
+    author={Maruani, Anna 
+    and Dumas, Guillaume 
+    and Beggiato, Anita 
+    and Traut, Nicolas 
+    and Peyre, Hugo 
+    and Cohen-Freoua, Alicia 
+    and Amsellem, Frédérique 
+    and Elmaleh, Monique 
+    and Germanaud, David 
+    and Launay, Jean-Marie 
+    and Bourgeron, Thomas 
+    and Toro, Roberto 
+    and Delorme, Richard},    
     title={Morning Plasma Melatonin Differences in Autism: Beyond the Impact of Pineal Gland Volume},      
 	journal={Frontiers in Psychiatry},      
 	volume={10},      
