--- a/tutorials/5-model_selection.ipynb
+++ b/tutorials/5-model_selection.ipynb
@@ -84,7 +84,7 @@
     "## **Example**\n",
     "In this example we'll use the ADHD resting-state dataset to demonstrate using cross-validation for model selection. The dataset consists of resting state fMRI scans for 40 subjects which are either controls or patients diagnosed with ADHD. Here we'll use `nilearn` to fetch the data and process it into connectomes, which are correlation matrices that capture how similar each pair of brain regions are in terms of their functional activity, and for demonstration purposes we'll choose an arbitrary edge from the connectome to fit our normative models to.\n",
     "\n",
-    "First, we'll use nilearn to fetch the data. Running the cell below will download ~700 MB of data to your machine."
+    "First, we'll use nilearn to fetch the data. Running the cell below will download ~2 GB of data to your machine."
    ]
   },
   {
@@ -774,7 +774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we'll build a DataFrame that we can use with PyNM. We'll grab the IDs, status (patient or control), gender, and age from the Cobre phenotypic information first and sort the values according to ID to match the order we processed the connectomes. Then we'll choose a random edge of the connectome to model for our example and add it to the dataframe.\n",
+    "Now we'll build a DataFrame that we can use with PyNM. We'll grab the IDs, status (patient or control), gender, and age from the ADHD phenotypic information first and sort the values according to ID to match the order we processed the connectomes. Then we'll choose a random edge of the connectome to model for our example and add it to the dataframe.\n",
     "\n",
     "**Note:**\n",
     "We are building the DataFrame in this manner to ensure that pandas has the correct `dtype` for each column - if the DataFrame has `object` type for any of the columns it will cause an issue with the GAMLSS model (when the DataFrame is converted to R)."
@@ -788,7 +788,7 @@
    "source": [
     "# Create a DataFrame\n",
     "pheno = pd.DataFrame([int(x) for x in pd.DataFrame(adhd.phenotypic)['Subject']],columns=['id'])\n",
-    "pheno['status'] = pd.DataFrame(adhd.phenotypic)['adhd']#[(x==b'Patient')*1 for x in adhd.phenotypic['subject_type']]\n",
+    "pheno['status'] = pd.DataFrame(adhd.phenotypic)['adhd']\n",
     "pheno['gender'] = [(x=='\"M\"')*1 for x in pd.DataFrame(adhd.phenotypic)['sex']]\n",
     "pheno['age'] = [x for x in pd.DataFrame(adhd.phenotypic)['age']]\n",
     "\n",
